--- a/svc/index.html
+++ b/svc/index.html
@@ -49,7 +49,7 @@
           <h2>2. Overview of R2-SVC</h2>
           <div class="model-diagram">
             <img
-              src="svc/imgs/r2svc_arc.png"
+              src="imgs/r2svc_arc.png"
               alt="R2-SVC Architecture Diagram"
               class="architecture-img"
             />
@@ -119,7 +119,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre1_vocal1.wav"
+                      src="audios/jaychou_normal_our_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -128,7 +128,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre1_vocal2.wav"
+                      src="svc/audios/jaychou_normal_our_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -137,7 +137,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre1_vocal3.wav"
+                      src="svc/audios/jaychou_normal_our_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -148,7 +148,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre1_vocal1.wav"
+                      src="svc/audios/jaychou_normal_seedvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -157,7 +157,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre1_vocal2.wav"
+                      src="svc/audios/jaychou_normal_seedvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -166,7 +166,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre1_vocal3.wav"
+                      src="svc/audios/jaychou_normal_seedvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -177,7 +177,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre1_vocal1.wav"
+                      src="svc/audios/jaychou_normal_freesvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -186,7 +186,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre1_vocal2.wav"
+                      src="svc/audios/jaychou_normal_freesvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -195,7 +195,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre1_vocal3.wav"
+                      src="svc/audios/jaychou_normal_freesvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
