--- a/svc/index.html
+++ b/svc/index.html
@@ -77,7 +77,7 @@
             <!-- Timbre 1 Row -->
             <div class="timbre-row">
               <div class="timbre-label">
-                <span>timbre 1 wav</span>
+                <span>timbre 1</span>
                 <audio controls>
                   <source
                     src="path/to/timbre1_reference.wav"
@@ -87,7 +87,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre1_vocal1.wav"
@@ -96,7 +96,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre1_vocal2.wav"
@@ -105,7 +105,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre1_vocal3.wav"
@@ -116,7 +116,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="audios/jaychou_normal_our_001.wav"
@@ -125,10 +125,39 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
+                  <!-- <span>vocal2</span> -->
+                  <audio controls>
+                    <source
+                      src="audios/jaychou_normal_our_002.wav"
+                      type="audio/wav"
+                    />
+                  </audio>
+                </div>
+                <div class="vocal-item">
+                  <!-- <span>vocal3</span> -->
+                  <audio controls>
+                    <source
+                      src="audios/jaychou_normal_our_003.wav"
+                      type="audio/wav"
+                    />
+                  </audio>
+                </div>
+              </div>
+              <div class="vocal-samples">
+                <div class="vocal-item">
+                  <!-- <span>vocal1</span> -->
+                  <audio controls>
+                    <source
+                      src="audios/jaychou_normal_seedvc_001.wav"
+                      type="audio/wav"
+                    />
+                  </audio>
+                </div>
+                <div class="vocal-item">
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="svc/audios/jaychou_normal_our_002.wav"
+                      src="audios/jaychou_normal_seedvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -137,7 +166,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="svc/audios/jaychou_normal_our_003.wav"
+                      src="audios/jaychou_normal_seedvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -148,7 +177,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="svc/audios/jaychou_normal_seedvc_001.wav"
+                      src="audios/jaychou_normal_freesvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -157,7 +186,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="svc/audios/jaychou_normal_seedvc_002.wav"
+                      src="audios/jaychou_normal_freesvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -166,36 +195,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="svc/audios/jaychou_normal_seedvc_003.wav"
-                      type="audio/wav"
-                    />
-                  </audio>
-                </div>
-              </div>
-              <div class="vocal-samples">
-                <div class="vocal-item">
-                  <span>vocal1</span>
-                  <audio controls>
-                    <source
-                      src="svc/audios/jaychou_normal_freesvc_001.wav"
-                      type="audio/wav"
-                    />
-                  </audio>
-                </div>
-                <div class="vocal-item">
-                  <span>vocal2</span>
-                  <audio controls>
-                    <source
-                      src="svc/audios/jaychou_normal_freesvc_002.wav"
-                      type="audio/wav"
-                    />
-                  </audio>
-                </div>
-                <div class="vocal-item">
-                  <span>vocal3</span>
-                  <audio controls>
-                    <source
-                      src="svc/audios/jaychou_normal_freesvc_003.wav"
+                      src="audios/jaychou_normal_freesvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
