--- a/svc/index.html
+++ b/svc/index.html
@@ -248,7 +248,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre2_vocal1.wav"
+                      src="audios/孙燕姿_normal_our_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -257,7 +257,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre2_vocal2.wav"
+                      src="audios/孙燕姿_normal_our_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -266,7 +266,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre2_vocal3.wav"
+                      src="audios/孙燕姿_normal_our_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -277,7 +277,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre2_vocal1.wav"
+                      src="audios/孙燕姿_normal_seedvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -286,7 +286,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre2_vocal2.wav"
+                      src="audios/孙燕姿_normal_seedvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -295,7 +295,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre2_vocal3.wav"
+                      src="audios/孙燕姿_normal_seedvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -306,7 +306,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre2_vocal1.wav"
+                      src="audios/孙燕姿_normal_freesvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -315,7 +315,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre2_vocal2.wav"
+                      src="audios/孙燕姿_normal_freesvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -324,7 +324,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre2_vocal3.wav"
+                      src="audios/孙燕姿_normal_freesvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -377,7 +377,7 @@
                   <span>vocal1</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre3_vocal1.wav"
+                      src="audios/贾斯汀比伯_normal_our_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -386,7 +386,7 @@
                   <span>vocal2</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre3_vocal2.wav"
+                      src="audios/贾斯汀比伯_normal_our_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -395,7 +395,7 @@
                   <span>vocal3</span>
                   <audio controls>
                     <source
-                      src="path/to/ours_timbre3_vocal3.wav"
+                      src="audios/贾斯汀比伯_normal_our_003.wav"
                       type="audio/wav"
                     />
                   </audio>
