--- a/svc/index.html
+++ b/svc/index.html
@@ -154,7 +154,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="audios/jaychou_normal_seedvc_002.wav"
@@ -163,7 +163,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="audios/jaychou_normal_seedvc_003.wav"
@@ -174,7 +174,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="audios/jaychou_normal_freesvc_001.wav"
@@ -183,7 +183,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="audios/jaychou_normal_freesvc_002.wav"
@@ -192,7 +192,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="audios/jaychou_normal_freesvc_003.wav"
@@ -206,7 +206,7 @@
             <!-- Timbre 2 Row -->
             <div class="timbre-row">
               <div class="timbre-label">
-                <span>timbre 2 wav</span>
+                <span>timbre 2</span>
                 <audio controls>
                   <source
                     src="path/to/timbre2_reference.wav"
@@ -216,7 +216,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre2_vocal1.wav"
@@ -225,7 +225,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre2_vocal2.wav"
@@ -234,7 +234,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre2_vocal3.wav"
@@ -245,7 +245,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_our_001.wav"
@@ -254,7 +254,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_our_002.wav"
@@ -263,7 +263,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_our_003.wav"
@@ -274,7 +274,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_seedvc_001.wav"
@@ -283,7 +283,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_seedvc_002.wav"
@@ -292,7 +292,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_seedvc_003.wav"
@@ -303,7 +303,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_freesvc_001.wav"
@@ -312,7 +312,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_freesvc_002.wav"
@@ -321,7 +321,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal3</span>
+                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="audios/孙燕姿_normal_freesvc_003.wav"
@@ -374,7 +374,7 @@
               </div>
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <span>vocal1</span>
+                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="audios/贾斯汀比伯_normal_our_001.wav"
@@ -383,7 +383,7 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <span>vocal2</span>
+                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="audios/贾斯汀比伯_normal_our_002.wav"
