--- a/svc/index.html
+++ b/svc/index.html
@@ -375,7 +375,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre3_vocal1.wav"
+                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -383,7 +383,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre3_vocal2.wav"
+                      src="audios/贾斯汀比伯_normal_seedvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -391,7 +391,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/seedvc_timbre3_vocal3.wav"
+                      src="audios/贾斯汀比伯_normal_seedvc_003.wav"
                       type="audio/wav"
                     />
                   </audio>
