--- a/svc/index.html
+++ b/svc/index.html
@@ -79,10 +79,7 @@
               <div class="timbre-label">
                 <span>timbre 1</span>
                 <audio controls>
-                  <source
-                    src="path/to/timbre1_reference.wav"
-                    type="audio/wav"
-                  />
+                  <source src="audios/jaychou.wav" type="audio/wav" />
                 </audio>
               </div>
               <div class="vocal-samples">
@@ -196,10 +193,7 @@
               <div class="timbre-label">
                 <span>timbre 2</span>
                 <audio controls>
-                  <source
-                    src="path/to/timbre2_reference.wav"
-                    type="audio/wav"
-                  />
+                  <source src="audios/孙燕姿.wav" type="audio/wav" />
                 </audio>
               </div>
               <div class="vocal-samples">
@@ -313,10 +307,7 @@
               <div class="timbre-label">
                 <span>timbre 3</span>
                 <audio controls>
-                  <source
-                    src="path/to/timbre3_reference.wav"
-                    type="audio/wav"
-                  />
+                  <source src="audios/贾斯汀比伯.wav" type="audio/wav" />
                 </audio>
               </div>
               <div class="vocal-samples">
