--- a/svc/index.html
+++ b/svc/index.html
@@ -54,9 +54,9 @@
               class="architecture-img"
             />
             <p class="diagram-caption">
-              Figure 1: Overview of the R2-SVC framework showing the main
-              components including feature extraction, robustness enhancement,
-              and the Neural Source-Filter model integration.
+              Overview of the R2-SVC framework showing the main components
+              including feature extraction, robustness enhancement, and the
+              Neural Source-Filter model integration.
             </p>
           </div>
         </section>
@@ -434,7 +434,7 @@
             <!-- Timbre 1 Row -->
             <div class="timbre-row">
               <div class="timbre-label">
-                <span>timbre 1 wav</span>
+                <span>timbre 1</span>
                 <audio controls>
                   <source
                     src="path/to/timbre1_reference.wav"
@@ -563,7 +563,7 @@
             <!-- Timbre 2 Row -->
             <div class="timbre-row">
               <div class="timbre-label">
-                <span>timbre 2 wav</span>
+                <span>timbre 2</span>
                 <audio controls>
                   <source
                     src="path/to/timbre2_reference.wav"
@@ -692,7 +692,7 @@
             <!-- Timbre 3 Row -->
             <div class="timbre-row">
               <div class="timbre-label">
-                <span>timbre 3 wav</span>
+                <span>timbre 3</span>
                 <audio controls>
                   <source
                     src="path/to/timbre3_reference.wav"
