--- a/svc/index.html
+++ b/svc/index.html
@@ -86,7 +86,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre1_vocal1.wav"
+                      src="audios/jaychou_vocal_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -94,7 +94,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre1_vocal2.wav"
+                      src="audios/jaychou_vocal_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -102,7 +102,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre1_vocal3.wav"
+                      src="audios/jaychou_vocal_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -128,7 +128,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/jaychou_normal_our_003.wav"
+                      src="audios/jaychou_normal_our_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -154,7 +154,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/jaychou_normal_seedvc_003.wav"
+                      src="audios/jaychou_normal_seedvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -180,7 +180,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="audios/jaychou_normal_freesvc_003.wav"
+                      src="audios/jaychou_normal_freesvc_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -200,7 +200,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre2_vocal1.wav"
+                      src="audios/孙燕姿_vocal_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -208,7 +208,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre2_vocal2.wav"
+                      src="audios/孙燕姿_vocal_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -216,7 +216,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre2_vocal3.wav"
+                      src="audios/孙燕姿_vocal_003.wav"
                       type="audio/wav"
                     />
                   </audio>
