--- a/svc/index.html
+++ b/svc/index.html
@@ -314,7 +314,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre3_vocal1.wav"
+                      src="audios/贾斯汀比伯_vocal_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -322,7 +322,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre3_vocal2.wav"
+                      src="audios/贾斯汀比伯_vocal_002.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -330,7 +330,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/original_timbre3_vocal3.wav"
+                      src="audios/贾斯汀比伯_vocal_003.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -392,7 +392,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre3_vocal1.wav"
+                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -400,7 +400,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre3_vocal2.wav"
+                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
@@ -408,7 +408,7 @@
                 <div class="vocal-item">
                   <audio controls>
                     <source
-                      src="path/to/freevc_timbre3_vocal3.wav"
+                      src="audios/贾斯汀比伯_normal_seedvc_001.wav"
                       type="audio/wav"
                     />
                   </audio>
