--- a/svc/index.html
+++ b/svc/index.html
@@ -809,6 +809,27 @@
         </section>
       </main>
 
+      <section id="references">
+        <h2>References</h2>
+        <div class="references-list">
+          <div class="reference-item">
+            <span class="reference-number">[1]</span>
+            <span class="reference-text">
+              Alef Iury Ferreira, Lucas Rafael Gris, Augusto Da Rosa, et al.,
+              "Freesvc: Towards zero-shot multilingual singing voice
+              conversion," in <em>ICASSP</em>, 2025, pp. 1–5.
+            </span>
+          </div>
+          <div class="reference-item">
+            <span class="reference-number">[2]</span>
+            <span class="reference-text">
+              Songting Liu, "Zero-shot voice conversion with diffusion
+              transformers," <em>arXiv preprint arXiv:2411.09943</em>, 2024.
+            </span>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <p>Paper submitted to ICASSP 2026</p>
         <p>
