--- a/svc/index.html
+++ b/svc/index.html
@@ -833,7 +833,8 @@
       <footer>
         <p>Paper submitted to ICASSP 2026</p>
         <p>
-          <a href="#paper">Paper PDF</a> | <a href="#code">Code Repository</a>
+          <!-- <a href="#paper">Paper PDF</a> | <a href="#code">Code Repository</a> -->
+          <a href="#paper">Paper PDF</a>
         </p>
       </footer>
     </div>
