--- a/svc/index.html
+++ b/svc/index.html
@@ -830,13 +830,13 @@
         </div>
       </section>
 
-      <footer>
+      <!-- <footer>
         <p>Paper submitted to ICASSP 2026</p>
-        <p>
-          <!-- <a href="#paper">Paper PDF</a> | <a href="#code">Code Repository</a> -->
-          <a href="#paper">Paper PDF</a>
+        <p> -->
+      <!-- <a href="#paper">Paper PDF</a> | <a href="#code">Code Repository</a> -->
+      <!-- <a href="#paper">Paper PDF</a>
         </p>
-      </footer>
+      </footer> -->
     </div>
   </body>
 </html>
