--- a/svc/index.html
+++ b/svc/index.html
@@ -436,102 +436,70 @@
               <div class="timbre-label">
                 <span>timbre 1</span>
                 <audio controls>
-                  <source
-                    src="path/to/timbre1_reference.wav"
-                    type="audio/wav"
-                  />
+                  <source src="audios/青年活力女.wav" type="audio/wav" />
                 </audio>
               </div>
+
+              <!-- original vocal -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre1_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre1_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/original_timbre1_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
+
+              <!-- ours -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre1_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre1_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/ours_timbre1_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
+
+              <!-- seedvc -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre1_vocal1.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre1_vocal2.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
-                    <source
-                      src="path/to/seedvc_timbre1_vocal3.wav"
-                      type="audio/wav"
-                    />
+                    <source src="audios/zhanwei.wav" type="audio/wav" />
                   </audio>
                 </div>
               </div>
+
+              <!-- freevc -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/freevc_timbre1_vocal1.wav"
@@ -540,7 +508,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/freevc_timbre1_vocal2.wav"
@@ -549,7 +516,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/freevc_timbre1_vocal3.wav"
@@ -565,15 +531,13 @@
               <div class="timbre-label">
                 <span>timbre 2</span>
                 <audio controls>
-                  <source
-                    src="path/to/timbre2_reference.wav"
-                    type="audio/wav"
-                  />
+                  <source src="audios/老年女2.wav" type="audio/wav" />
                 </audio>
               </div>
+
+              <!-- origianl -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre2_vocal1.wav"
@@ -582,7 +546,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre2_vocal2.wav"
@@ -591,7 +554,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/original_timbre2_vocal3.wav"
@@ -600,9 +562,10 @@
                   </audio>
                 </div>
               </div>
+
+              <!-- ours -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/ours_timbre2_vocal1.wav"
@@ -611,7 +574,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/ours_timbre2_vocal2.wav"
@@ -620,7 +582,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/ours_timbre2_vocal3.wav"
@@ -629,9 +590,10 @@
                   </audio>
                 </div>
               </div>
+
+              <!-- seedvc -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/seedvc_timbre2_vocal1.wav"
@@ -640,7 +602,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/seedvc_timbre2_vocal2.wav"
@@ -649,7 +610,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/seedvc_timbre2_vocal3.wav"
@@ -658,9 +618,10 @@
                   </audio>
                 </div>
               </div>
+
+              <!-- freevc -->
               <div class="vocal-samples">
                 <div class="vocal-item">
-                  <!-- <span>vocal1</span> -->
                   <audio controls>
                     <source
                       src="path/to/freevc_timbre2_vocal1.wav"
@@ -669,7 +630,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal2</span> -->
                   <audio controls>
                     <source
                       src="path/to/freevc_timbre2_vocal2.wav"
@@ -678,7 +638,6 @@
                   </audio>
                 </div>
                 <div class="vocal-item">
-                  <!-- <span>vocal3</span> -->
                   <audio controls>
                     <source
                       src="path/to/freevc_timbre2_vocal3.wav"
@@ -694,12 +653,11 @@
               <div class="timbre-label">
                 <span>timbre 3</span>
                 <audio controls>
-                  <source
-                    src="path/to/timbre3_reference.wav"
-                    type="audio/wav"
-                  />
+                  <source src="audios/青年解说男.wav" type="audio/wav" />
                 </audio>
               </div>
+
+              <!-- original -->
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
@@ -726,6 +684,8 @@
                   </audio>
                 </div>
               </div>
+
+              <!-- ours -->
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
@@ -752,6 +712,8 @@
                   </audio>
                 </div>
               </div>
+
+              <!-- seedvc -->
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
@@ -778,6 +740,8 @@
                   </audio>
                 </div>
               </div>
+
+              <!-- freevc -->
               <div class="vocal-samples">
                 <div class="vocal-item">
                   <audio controls>
